# Imgcap

./: .gitignore  README.md  imgcap.py  nameit.py  pyproject.toml
.github/workflows/: publish.yml
tests/: test_imgcap.py  test_nameit.py
